--- a/miniflux/debian/control
+++ b/miniflux/debian/control
@@ -5,5 +5,5 @@ Build-Depends: debhelper (>= 9), dh-systemd
 Package: miniflux
 Architecture: amd64
 Description: Minimalist Feed Reader
-Homepage: https://miniflux.net/
+Homepage: https://miniflux.app
 Depends: ${misc:Depends}, ${shlibs:Depends}, adduser
