--- a/miniflux/debian/control
+++ b/miniflux/debian/control
@@ -4,6 +4,8 @@ Build-Depends: debhelper (>= 9), dh-systemd
 
 Package: miniflux
 Architecture: amd64
+Section: web
+Priority: optional
 Description: Minimalist Feed Reader
 Homepage: https://miniflux.app
-Depends: ${misc:Depends}, ${shlibs:Depends}, adduser
+Depends: ${misc:Depends}, adduser
